--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
   <title>Book List</title>
 </head>
 <body>
+  <div class="container">
+    <h1>Add Book</h1>
+    <form id="book-form">
+      <div>
+        <label for="title">Title</label>
+        <input type="text" id="title" class="u-full-width">
+      </div>
+      <div>
+        <label for="author">Author</label>
+        <input type="text" id="author" class="u-full-width">
+      </div>
+      <div>
+        <label for="isbn">ISBN#</label>
+        <input type="text" id="isbn" class="u-full-width">
+      </div>
+    </form>
+    <hr>
+    <table class="u-full-width">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Author</th>
+          <th>ISBN</th>
+        </tr>
+      </thead>
+      <tbody class="book-list"></tbody>
+    </table>
+  </div>
   <!-- ES5 JavaScript File -->
   <script src="js/app.js"></script>
 </body>
