Added a submit button for the book form

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <label for="isbn">ISBN#</label>
         <input type="text" id="isbn" class="u-full-width">
       </div>
+      <div>
+        <input type="submit" value="Submit" class="u-full-width">
+      </div>
     </form>
     <hr>
     <table class="u-full-width">
