Chaged class on table body to id

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <th>ISBN</th>
         </tr>
       </thead>
-      <tbody class="book-list"></tbody>
+      <tbody id="book-list"></tbody>
     </table>
   </div>
   <!-- ES5 JavaScript File -->
