--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
     </table>
   </div>
   <!-- ES5 JavaScript File -->
-  <script src="js/app.js"></script>
+  <script src="js/appes6.js"></script>
 </body>
 </html>
